--- a/BeeniHackathon/index.html
+++ b/BeeniHackathon/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Beeni</title>
   </head>
+  <div id="modal"></div>
   <body>
     <div id="app"></div>
+    
+    
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
